force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_Account_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_Account_Type_Code__c</fullName>
    <inlineHelpText>Report the specific code that identifies the account classification.</inlineHelpText>
    <label>DM Account Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_7B - Agricultural</fullName>
            </value>
            <value>
                <fullName>DM_00 - Auto</fullName>
            </value>
            <value>
                <fullName>DM_3A - Auto Lease</fullName>
            </value>
            <value>
                <fullName>DM_10 - Business Loan</fullName>
            </value>
            <value>
                <fullName>DM_6A - Commercial Installment Loan</fullName>
            </value>
            <value>
                <fullName>DM_0F - Construction Loan</fullName>
            </value>
            <value>
                <fullName>DM_12 - Education</fullName>
            </value>
            <value>
                <fullName>DM_15 - Line of Credit</fullName>
            </value>
            <value>
                <fullName>DM_20 - Note Loan</fullName>
            </value>
            <value>
                <fullName>DM_03 - Partially Secured</fullName>
            </value>
            <value>
                <fullName>DM_29 - Rental Agreement</fullName>
            </value>
            <value>
                <fullName>DM_02 - Secured</fullName>
            </value>
            <value>
                <fullName>01 - Unsecured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>