force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_First_Delinquency_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_First_Delinquency_Date__c</fullName>
    <inlineHelpText>This will be reported only if the Account Status Code is 61-65, 71, 78, 80, 82-84, 88-89 and 93-97.
This field gets updated only when the status of loan account changes from Active-Good Standing to Active-Bad Standing.</inlineHelpText>
    <label>DM Date of First Delinquency</label>
    <type>Date</type>
</CustomField>