force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_Payment_Rating__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_Payment_Rating__c</fullName>
    <inlineHelpText>The Payment Rating contains a code that properly identifies whether the account is current, past due, in collections or charged off within the activity period being reported.</inlineHelpText>
    <label>DM Payment Rating</label>
    <length>4</length>
    <type>Text</type>
</CustomField>