force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_Portfolio_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_Portfolio_Type__c</fullName>
    <inlineHelpText>Contains the one-character abbreviation for type of portfolio. Values available:
C = Line of credit
I = Installment
M = Mortgage
O = Open account
R = Revolving</inlineHelpText>
    <label>DM Portfolio Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Installment</fullName>
                <default>true</default>
                <label>DM_Installment</label>
            </value>
            <value>
                <fullName>DM_Line of Credit</fullName>
            </value>
            <value>
                <fullName>DM_Mortgage</fullName>
            </value>
            <value>
                <fullName>DM_Open Account</fullName>
            </value>
            <value>
                <fullName>DM_Revolving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>