force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Next_Due_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Next_Due_Generation_Date__c</fullName>
    <description>Next Due Generation Date.</description>
    <inlineHelpText>This is determined by using the pre- bill days.</inlineHelpText>
    <label>DM Next Due Generation Date</label>
    <type>Date</type>
</CustomField>