force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Next_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Next_Installment_Date__c</fullName>
    <description>Date of the next installment</description>
    <inlineHelpText>Date of the Next Due</inlineHelpText>
    <label>DM Next Due Date</label>
    <type>Date</type>
</CustomField>