force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Number_of_Installments__c.field-meta.xml
<CustomField>
    <fullName>DM_Number_of_Installments__c</fullName>
    <description>Contractual Term Of the Loan Account</description>
    <inlineHelpText>Contractual term of the contract.</inlineHelpText>
    <label>DM Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>