force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Oldest_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Oldest_Due_Date__c</fullName>
    <description>Oldest Due Date</description>
    <inlineHelpText>Oldest due date on the loan account.</inlineHelpText>
    <label>DM Oldest Unpaid  Due Date</label>
    <type>Date</type>
</CustomField>