force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Overdue_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_Overdue_Interest_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DM Overdue Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>