force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Overdue_Principal__c.field-meta.xml
<CustomField>
    <fullName>DM_Overdue_Principal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Overdue principal from earlier installments.</description>
    <inlineHelpText>Overdue principal from earlier installments.</inlineHelpText>
    <label>DM Overdue Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>