force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Payment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Loan payment amount. It excludes any fee that is gathered as a part of EMI.</description>
    <inlineHelpText>Contractual payment amount</inlineHelpText>
    <label>DM Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>