force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Payment_Application_Mode__c.field-meta.xml
<CustomField>
    <fullName>DM_Payment_Application_Mode__c</fullName>
    <description>If the value is Future Dues, Reserve Amount For Next Due will be used for satisfying Bills. Otherwise, Reserve Amount For Next Due will not be used for satisfying Bills.
        Deposit is selected when extra amount is used to increase the deposit amount</description>
    <inlineHelpText>Possible values are
1) Future Dues
2) Current Dues
3) Deposit
Future Dues is used when Loan Payments should be used to satisfy future dues.
Current Dues is used when Loan Payments should only be used to satisfy present dues.</inlineHelpText>
    <label>DM Payment Application Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Future Dues</fullName>
                <default>true</default>
                <label>DM_Future Dues</label>
            </value>
            <value>
                <fullName>DM_Current Dues</fullName>
            </value>
            <value>
                <fullName>DM_Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>