force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Pre_Bill_Days__c.field-meta.xml
<CustomField>
    <fullName>DM_Pre_Bill_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days before due date to have the bill generated.</description>
    <inlineHelpText>Number of days for the bill to be generated before the actual installment date</inlineHelpText>
    <label>DM Pre Bill Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>