force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Principal_Posted__c.field-meta.xml
<CustomField>
    <fullName>DM_Principal_Posted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Principal/Advance Posted</description>
    <inlineHelpText>Total Principal/Advance given to customer.</inlineHelpText>
    <label>DM Principal/Advance Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>