force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Principal_Remaining__c.field-meta.xml
<CustomField>
    <fullName>DM_Principal_Remaining__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Principal/Advance Remaining</description>
    <inlineHelpText>Unpaid Principal/advance balance on the loan account.</inlineHelpText>
    <label>DM Principal/Advance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>