force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Product__c.field-meta.xml
<CustomField>
    <fullName>DM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Product</label>
    <referenceTo>loan__Loan_Product__c</referenceTo>
    <relationshipLabel>DM CL Contract</relationshipLabel>
    <relationshipName>DM_CL_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>