force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Product_Type__c</fullName>
    <description>Type of Product, only LoC and Loans are supported.</description>
    <inlineHelpText>This will be populated from lending product and must not be changed by the user.
This will define the classification of the product.
Possible values are
1) Loan
2) Line of credit
3) Merchant Cash Advance</inlineHelpText>
    <label>DM Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Loan</fullName>
                <default>true</default>
                <label>DM_Loan</label>
            </value>
            <value>
                <fullName>DM_Line of Credit</fullName>
            </value>
            <value>
                <fullName>DM_Merchant Cash Advance</fullName>
            </value>
            <value>
                <fullName>DM_Amz Based Loan</fullName>
            </value>
            <value>
                <fullName>DM_Flexible Amz Loan</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>