force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Rate_Change_Dt_Last__c.field-meta.xml
<CustomField>
    <fullName>DM_Rate_Change_Dt_Last__c</fullName>
    <inlineHelpText>The last date when the interest rate changed on the loan account</inlineHelpText>
    <label>DM Last Rate Change Date</label>
    <type>Date</type>
</CustomField>