force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Rate_Change_Dt_Next__c.field-meta.xml
<CustomField>
    <fullName>DM_Rate_Change_Dt_Next__c</fullName>
    <inlineHelpText>This contains the date when the interest rate will change for the loan account</inlineHelpText>
    <label>DM Next Rate Change Date</label>
    <type>Date</type>
</CustomField>