force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Reinvest_Interest__c.field-meta.xml
<CustomField>
    <fullName>DM_Reinvest_Interest__c</fullName>
    <label>DM Reinvest Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>