force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Repayment_Procedure__c.field-meta.xml
<CustomField>
    <fullName>DM_Repayment_Procedure__c</fullName>
    <inlineHelpText>This is the procedure to be followed to create the Installment schedule.</inlineHelpText>
    <label>DM Repayment Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Equal Monthly Installments</fullName>
                <default>true</default>
                <label>DM_Equal Monthly Installments</label>
            </value>
            <value>
                <fullName>DM_Flexible</fullName>
            </value>
            <value>
                <fullName>DM_Equated Principal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>