force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Repayment_Tied_to_Meeting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>DM_Repayment_Tied_to_Meeting_Schedule__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DM Is Repayment Tied to Meeting Schedule</label>
    <type>Checkbox</type>
</CustomField>