force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Reschedule_Option_On_Excess_Payment__c.field-meta.xml
<CustomField>
    <fullName>DM_Reschedule_Option_On_Excess_Payment__c</fullName>
    <description>The option used for rescheduling the loan when an excess payment equal to or more than the excess threshold for reschedule is received. You can reschedule by changing either the payment amount or the tenure of the loan.</description>
    <inlineHelpText>The option used for rescheduling the loan when an excess payment equal to or more than the excess threshold for reschedule is received. You can reschedule by changing either the payment amount or the tenure of the loan.</inlineHelpText>
    <label>DM Reschedule Option On Excess Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Change Payment Amount</fullName>
            </value>
            <value>
                <fullName>DM_Keep Same Payment Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>