force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Second_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Second_Installment_Date__c</fullName>
    <description>Date of the Second installment</description>
    <inlineHelpText>This is the second Payment Date and will be used only for semi monthly Payday loans.</inlineHelpText>
    <label>DM Second Payment Date</label>
    <type>Date</type>
</CustomField>