force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Skipped_a_Pay__c.field-meta.xml
<CustomField>
    <fullName>DM_Skipped_a_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Skipped a Pay</label>
    <type>Checkbox</type>
</CustomField>