force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Skipped_a_pay_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Skipped_a_pay_Date__c</fullName>
    <label>DM Skipped a pay Date</label>
    <type>Date</type>
</CustomField>