force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Success__c.field-meta.xml
<CustomField>
    <fullName>DM_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Success</label>
    <type>Checkbox</type>
</CustomField>