force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Term_Cur__c.field-meta.xml
<CustomField>
    <fullName>DM_Term_Cur__c</fullName>
    <description>Current Term</description>
    <inlineHelpText>Current loan account term.</inlineHelpText>
    <label>DM Current Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>