force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Thread_Number__c.field-meta.xml
<CustomField>
    <fullName>DM_Thread_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Thread number decides on which set the loan will be part of during parallel running of batch jobs.</description>
    <label>DM Thread Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>