force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Time_Counting_Method__c.field-meta.xml
<CustomField>
    <fullName>DM_Time_Counting_Method__c</fullName>
    <label>DM Time Counting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month And Days</fullName>
            </value>
            <value>
                <fullName>Actual/360</fullName>
            </value>
            <value>
                <fullName>Actual Days (366)</fullName>
            </value>
            <value>
                <fullName>Actual Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>