force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>DM_Total_Amount_Paid__c</fullName>
    <formula>DM_Interest_Paid__c + DM_Principal_Paid__c + DM_Fees_Paid__c +  DM_Penalty_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount paid by the customer on this account. This includes any amount received towards fees,interest,principal and excess.</inlineHelpText>
    <label>DM Total Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>