force-app/main/default/objects/DM_Loan_Account__c/fields/DM_U_LoanModForbearDt__c.field-meta.xml
<CustomField>
    <fullName>DM_U_LoanModForbearDt__c</fullName>
    <label>DM U_LoanModForbearDt</label>
    <type>Date</type>
</CustomField>