force-app/main/default/objects/DM_Loan_Account__c/fields/DM_U_LoanModRate__c.field-meta.xml
<CustomField>
    <fullName>DM_U_LoanModRate__c</fullName>
    <label>DM U_LoanModRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>