force-app/main/default/objects/DM_Loan_Account__c/fields/DM_U_LoanModRateEffDt__c.field-meta.xml
<CustomField>
    <fullName>DM_U_LoanModRateEffDt__c</fullName>
    <label>DM U_LoanModRateEffDt</label>
    <type>Date</type>
</CustomField>