force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Unpaid_Bills__c.field-meta.xml
<CustomField>
    <fullName>DM_Unpaid_Bills__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if Loan has unpaid Bills or not</description>
    <label>DM Unpaid Bills</label>
    <type>Checkbox</type>
</CustomField>