force-app/main/default/objects/DM_Loan_Account__c/fields/forAMZ__c.field-meta.xml
<CustomField>
    <fullName>forAMZ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>forAMZ</label>
    <type>Checkbox</type>
</CustomField>