force-app/main/default/objects/DM_Loan_Account__c/fields/Migrated_CL_Contract__c.field-meta.xml
<CustomField>
    <fullName>Migrated_CL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Migrated CL Contract</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>DM CL Contract</relationshipLabel>
    <relationshipName>DM_CL_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>