force-app/main/default/objects/DM_Loan_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DM_Due_Day__c</columns>
    <columns>DM_Valid_Data__c</columns>
    <columns>DM_Invalid_Data__c</columns>
    <columns>DM_Error__c</columns>
    <columns>Migrated_CL_Contract__c</columns>
    <columns>Migration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>