force-app/main/default/objects/DM_Loan_Account__c/listViews/Failed.listView-meta.xml
<ListView>
    <fullName>Failed</fullName>
    <columns>NAME</columns>
    <columns>Product_Type__c</columns>
    <columns>Batch_Type__c</columns>
    <columns>Migration_Status__c</columns>
    <columns>DM_Account__c</columns>
    <columns>DM_Invalid_Data__c</columns>
    <columns>DM_Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Migration_Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed</label>
</ListView>