force-app/main/default/objects/DM_Loan_Account__c/listViews/Pending.listView-meta.xml
<ListView>
    <fullName>Pending</fullName>
    <columns>NAME</columns>
    <columns>DM_Account__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Batch_Type__c</columns>
    <columns>Migration_Status__c</columns>
    <columns>DM_Disbursal_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DM_Loan_Account_External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Migration_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending</label>
</ListView>