force-app/main/default/objects/DM_Loan_Account__c/listViews/Success.listView-meta.xml
<ListView>
    <fullName>Success</fullName>
    <columns>NAME</columns>
    <columns>DM_Account__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Batch_Type__c</columns>
    <columns>Migration_Status__c</columns>
    <columns>Migrated_CL_Contract__c</columns>
    <columns>DM_Disbursal_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DM_Loan_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Migration_Status__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </filters>
    <label>Success</label>
</ListView>